Changed header to "Hello, I'm a student!"

--- a/idata2301/week2/ex01.html
+++ b/idata2301/week2/ex01.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-<h1>Hello, I'm an HTML example!</h1>
+<h1>Hello, I'm a student!</h1>
 
 <p>This HTML document demonstrates a couple of things:</p>
 <ol>
