--- a/week4/idata2301/ex02-bugs-and-special-chars/ex02.html
+++ b/week4/idata2301/ex02-bugs-and-special-chars/ex02.html
@@ -11,7 +11,8 @@
 
 <p>Here is one text paragraph. Can <em>you</em> add another one?</p>
 <!-- Insert a paragraph of text here -->
-<p>Another paragraph :)</p>
+<p>a &lt; b</p>
+<p>&pi; is approximately 3.14159</p>
 
 <!-- Insert a bullet list here -->
 <ul>
